exports[`HiRouter considers optional '(:pony)' variable #1 1`] = `
<ul>
  <li>
    /test/foo
  </li>
  <li>
    /test
  </li>
</ul>
`;

exports[`HiRouter considers optional '(:pony)' variable #2 1`] = `
<ul>
  <li>
    /test/foo
  </li>
  <li>
    /test
  </li>
</ul>
`;

exports[`HiRouter ignores '*' routes 1`] = `
<p>
  <ul>
    <li>
      goToIndex
    </li>
  </ul>
</p>
`;

exports[`HiRouter renders AliasTestComponent and returns list of Urls 1`] = `
<ul>
  <li>
    /test
  </li>
  <li>
    /test/100/other
  </li>
</ul>
`;

exports[`HiRouter renders IndexTestComponent and returns '/' 1`] = `
<p>
  /
</p>
`;

exports[`HiRouter renders MultipleTestComponent and returns list of urls (multiple routes) 1`] = `
<ul>
  <li>
    /test
  </li>
  <li>
    /test/100/other
  </li>
</ul>
`;

exports[`HiRouter renders SingleTestComponent returning its own url (single route only) 1`] = `
<p>
  /test
</p>
`;
